# mcp-code-qna

./: .gitignore  README.md  TODO.md  debug_server.py  mcp  pyproject.toml  report_template.html  requirements.txt  run_test_evaluation.py  setup.py
app/: cli.py  main.py  mcp_web_server.py
app/generator/: answer_generator.py  question_understanding.py
app/indexer/: code_indexer.py
app/retriever/: retriever.py
app/static/: index.html  script.js  styles.css
evaluation_scripts/: evaluate_mcp.py  run_comprehensive_evaluation.py  run_simple_evaluation.py  run_test_evaluation.py
reports/sample_repo/: sample-python-repo_report_1749282104.html  sample-python-repo_report_1749282104.json  sample-python-repo_report_1749282104.md
scripts/: install_nlp_models.py  mcp_agent.py
tests/: __init__.py  test_grip_dataset_evaluation.py  test_sample_repo_question_understanding.py
