[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-code-qa"
version = "0.1.0"
description = "MCP Code QA Project"
authors = [
    {name = "MCP Team"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "pydantic==2.4.2",
    "langchain==0.0.312",
    "langchain_community==0.0.16",
    "sentence-transformers==2.2.2",
    "huggingface-hub==0.19.4",
    "faiss-cpu==1.7.4",
    "pyparsing==3.1.1",
    "ast-comments==1.0.1",
    "libcst==1.1.0",
    "spacy>=3.5.0",
    "textblob>=0.17.1",
    "python-dotenv==1.0.0",
    "numpy>=1.22.0",
]

[project.scripts]
mcp = "app.mcp_web_server:main"

[tool.setuptools]
packages = ["app"]
